--- a/_config.yml
+++ b/_config.yml
@@ -134,6 +134,7 @@ accent_color:          rgb(79,177,186)
 # Defaults to `accent_color`.
 theme_color:           rgb(8,46,57)
 
+# Default Thumbnail Image
 og_image:	       assets/img/logo.png
 
 # The string encoding which fonts to fetch from Google Fonts.
