--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    AI를 탐구하는 평범한 학부생
+    AI에 대해 알아보고자 하는 학부생입니다.
 
   #  Please check my [CV](/public.CV.pdf) to find out for more about me !
 
