YM의 공부노트

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,13 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    AI에 대해 알아보고자 하는 학부생입니다.
+    AI에 관심을 가지고 공부해보려고 합니다.
+    
+    인하대학교 전자공학과 학생입니다.
+
+    아직도 모르는 것 투성이지만 '열심' 하나로 해보겠습니다.
+
+    
 
   #  Please check my [CV](/public.CV.pdf) to find out for more about me !
 
