--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ tagline:               "
 		"
 
 # A list of keywords for your blog
-keywords:              [AI, computer vision, deep learning, GAN]
+keywords:              [AI, computer vision, deep learning, Anomaly Detection]
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
