--- a/_config.yml
+++ b/_config.yml
@@ -163,6 +163,7 @@ defaults:
       path:            hyde/
     values:
       accent_color:    rgb(38,139,210)
+      theme_color:     rgb(32,32,32)
       accent_image:
         background:    rgb(32,32,32)
         overlay:       false
@@ -339,16 +340,33 @@ hydejack:
       - /assets/img/swipe.svg
 
 
+# Collections
+# ----------------------------------------------------------------------------------------
+
+collections:
+  featured_categories:
+    permalink:         /:name/
+    output:            true
+
+  featured_tags:
+    permalink:         /tag-:name/
+    output:            true
+
+  projects:
+    permalink:         /projects/:path/
+    output:            true
+
+
 # File inclusion/exclusion
 # ----------------------------------------------------------------------------------------
 
 exclude:
   - .jekyll-cache
   - .sass-cache
+  - '*.toml'
   - vendor
   - Gemfile
   - Gemfile.lock
-
 include:
   - .well-known
   - LICENSE.md
